package model.prefrences;

public class SerialIOController {
    /*
     * Class Description:
     *
     */

    // This will basically just manage saving and loading of user profiles. Right now, I won't get into the
    // implementation as I only need to implement one of my user stories with the first deliverable
}
