package model.prefrences;

public interface UserPreference {
    /*
     * Class Description:
     *
     */

    // I don't really know what kinds of preferences I will have quite yet.
}
